src/test/resources/typeSystemTestModels/invalid/classes/ClassNotStatic.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.classes;

public static class ClassNotStatic {

  public static class A {


  }
}
